Ajout des features EMA26, EMA12, MACD, RSI, Relative volume, OBV, ATR

--- a/data_mining.ipynb
+++ b/data_mining.ipynb
@@ -4558,6 +4558,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "btc_data.to_csv('data/btc_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
