Ajout des features Momentum, Stochastic Osc, Bollinger

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,16 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('data/btc_data', index_col=0)"
+    "data = pd.read_csv('data/btc_data.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -50,59 +50,131 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>price</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>open</th>\n",
+       "      <th>volumefrom</th>\n",
+       "      <th>volumeto</th>\n",
+       "      <th>close</th>\n",
        "      <th>market_cap</th>\n",
        "      <th>progression daily</th>\n",
        "      <th>progression tomorrow</th>\n",
-       "      <th>volumeto</th>\n",
        "      <th>target</th>\n",
+       "      <th>ema_26</th>\n",
+       "      <th>ema_12</th>\n",
+       "      <th>macd</th>\n",
+       "      <th>rsi</th>\n",
+       "      <th>relative_volume</th>\n",
+       "      <th>obv</th>\n",
+       "      <th>atr</th>\n",
+       "      <th>difficulty</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2013-04-29</th>\n",
-       "      <td>141.960000</td>\n",
-       "      <td>1.575032e+09</td>\n",
-       "      <td>0.049224</td>\n",
-       "      <td>-0.046915</td>\n",
-       "      <td>9.983975e+06</td>\n",
+       "      <th>2011-01-01</th>\n",
+       "      <td>0.3000</td>\n",
+       "      <td>0.292</td>\n",
+       "      <td>0.3000</td>\n",
+       "      <td>2821.24</td>\n",
+       "      <td>8.419500e+02</td>\n",
+       "      <td>0.3000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.263021</td>\n",
+       "      <td>0.274296</td>\n",
+       "      <td>0.011275</td>\n",
+       "      <td>75.041736</td>\n",
+       "      <td>0.433468</td>\n",
+       "      <td>5.708910e+03</td>\n",
+       "      <td>0.018136</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-04-30</th>\n",
-       "      <td>135.300000</td>\n",
-       "      <td>1.501657e+09</td>\n",
-       "      <td>-0.046915</td>\n",
-       "      <td>-0.135255</td>\n",
-       "      <td>9.119201e+06</td>\n",
+       "      <th>2011-01-02</th>\n",
+       "      <td>0.3000</td>\n",
+       "      <td>0.289</td>\n",
+       "      <td>0.3000</td>\n",
+       "      <td>5352.11</td>\n",
+       "      <td>1.584660e+03</td>\n",
+       "      <td>0.3000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.265761</td>\n",
+       "      <td>0.278251</td>\n",
+       "      <td>0.012490</td>\n",
+       "      <td>74.831650</td>\n",
+       "      <td>0.784203</td>\n",
+       "      <td>4.124250e+03</td>\n",
+       "      <td>0.018214</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-05-01</th>\n",
-       "      <td>117.000000</td>\n",
-       "      <td>1.298952e+09</td>\n",
-       "      <td>-0.135255</td>\n",
-       "      <td>-0.115983</td>\n",
-       "      <td>2.178794e+07</td>\n",
+       "      <th>2011-01-03</th>\n",
+       "      <td>0.3000</td>\n",
+       "      <td>0.290</td>\n",
+       "      <td>0.3000</td>\n",
+       "      <td>1425.19</td>\n",
+       "      <td>4.208500e+02</td>\n",
+       "      <td>0.2950</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.016667</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.268297</td>\n",
+       "      <td>0.281597</td>\n",
+       "      <td>0.013300</td>\n",
+       "      <td>75.402884</td>\n",
+       "      <td>0.227126</td>\n",
+       "      <td>3.703400e+03</td>\n",
+       "      <td>0.016429</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-05-02</th>\n",
-       "      <td>103.430000</td>\n",
-       "      <td>1.148668e+09</td>\n",
-       "      <td>-0.115983</td>\n",
-       "      <td>-0.120081</td>\n",
-       "      <td>2.493210e+07</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-05-03</th>\n",
-       "      <td>91.010000</td>\n",
-       "      <td>1.011066e+09</td>\n",
-       "      <td>-0.120081</td>\n",
-       "      <td>0.222393</td>\n",
-       "      <td>2.249626e+07</td>\n",
+       "      <th>2011-01-04</th>\n",
+       "      <td>0.2999</td>\n",
+       "      <td>0.289</td>\n",
+       "      <td>0.2950</td>\n",
+       "      <td>1879.00</td>\n",
+       "      <td>5.483300e+02</td>\n",
+       "      <td>0.2989</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.016667</td>\n",
+       "      <td>0.013220</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.270275</td>\n",
+       "      <td>0.283659</td>\n",
+       "      <td>0.013384</td>\n",
+       "      <td>64.583333</td>\n",
+       "      <td>0.317246</td>\n",
+       "      <td>3.155070e+03</td>\n",
+       "      <td>0.015286</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-01-05</th>\n",
+       "      <td>0.2990</td>\n",
+       "      <td>0.290</td>\n",
+       "      <td>0.2989</td>\n",
+       "      <td>357.16</td>\n",
+       "      <td>1.061900e+02</td>\n",
+       "      <td>0.2990</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.013220</td>\n",
+       "      <td>0.000335</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.272395</td>\n",
+       "      <td>0.286004</td>\n",
+       "      <td>0.013608</td>\n",
+       "      <td>90.397805</td>\n",
+       "      <td>0.063656</td>\n",
+       "      <td>3.261260e+03</td>\n",
+       "      <td>0.014000</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -112,88 +184,186 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-10-12</th>\n",
-       "      <td>26842.190439</td>\n",
-       "      <td>5.236564e+11</td>\n",
-       "      <td>-0.020081</td>\n",
-       "      <td>-0.004212</td>\n",
-       "      <td>4.385320e+08</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-10-13</th>\n",
-       "      <td>26729.137206</td>\n",
-       "      <td>5.216077e+11</td>\n",
-       "      <td>-0.004212</td>\n",
-       "      <td>0.004190</td>\n",
+       "      <td>27110.9100</td>\n",
+       "      <td>26674.970</td>\n",
+       "      <td>26756.2300</td>\n",
+       "      <td>18507.04</td>\n",
        "      <td>4.967794e+08</td>\n",
+       "      <td>26862.9000</td>\n",
+       "      <td>5.216077e+11</td>\n",
+       "      <td>-0.004279</td>\n",
+       "      <td>0.003987</td>\n",
        "      <td>1</td>\n",
+       "      <td>27129.215560</td>\n",
+       "      <td>27294.402418</td>\n",
+       "      <td>165.186858</td>\n",
+       "      <td>46.835697</td>\n",
+       "      <td>0.904417</td>\n",
+       "      <td>1.270529e+10</td>\n",
+       "      <td>785.304286</td>\n",
+       "      <td>5.732151e+13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-10-14</th>\n",
-       "      <td>26841.136221</td>\n",
-       "      <td>5.236556e+11</td>\n",
-       "      <td>0.004190</td>\n",
-       "      <td>0.000821</td>\n",
+       "      <td>26982.7800</td>\n",
+       "      <td>26810.020</td>\n",
+       "      <td>26862.9000</td>\n",
+       "      <td>5865.21</td>\n",
        "      <td>1.576854e+08</td>\n",
-       "      <td>1</td>\n",
+       "      <td>26854.5200</td>\n",
+       "      <td>5.236556e+11</td>\n",
+       "      <td>0.003987</td>\n",
+       "      <td>-0.000312</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27109.488482</td>\n",
+       "      <td>27228.017431</td>\n",
+       "      <td>118.528949</td>\n",
+       "      <td>49.455572</td>\n",
+       "      <td>0.288510</td>\n",
+       "      <td>1.286298e+10</td>\n",
+       "      <td>786.607857</td>\n",
+       "      <td>5.732151e+13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-10-15</th>\n",
-       "      <td>26863.183569</td>\n",
-       "      <td>5.239792e+11</td>\n",
-       "      <td>0.000821</td>\n",
-       "      <td>0.010688</td>\n",
+       "      <td>27297.2600</td>\n",
+       "      <td>26813.060</td>\n",
+       "      <td>26854.5200</td>\n",
+       "      <td>10978.68</td>\n",
        "      <td>2.971100e+08</td>\n",
+       "      <td>27177.4100</td>\n",
+       "      <td>5.239792e+11</td>\n",
+       "      <td>-0.000312</td>\n",
+       "      <td>0.012024</td>\n",
        "      <td>1</td>\n",
+       "      <td>27090.601927</td>\n",
+       "      <td>27170.556287</td>\n",
+       "      <td>79.954360</td>\n",
+       "      <td>48.700891</td>\n",
+       "      <td>0.555745</td>\n",
+       "      <td>1.256587e+10</td>\n",
+       "      <td>738.972857</td>\n",
+       "      <td>5.732151e+13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-10-16</th>\n",
-       "      <td>27150.297001</td>\n",
+       "      <td>30009.1500</td>\n",
+       "      <td>27131.480</td>\n",
+       "      <td>27177.4100</td>\n",
+       "      <td>66720.48</td>\n",
+       "      <td>1.884463e+09</td>\n",
+       "      <td>28518.3700</td>\n",
        "      <td>5.296435e+11</td>\n",
-       "      <td>0.010688</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>4.770461e+08</td>\n",
+       "      <td>0.012024</td>\n",
+       "      <td>0.049341</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27097.032155</td>\n",
+       "      <td>27171.610705</td>\n",
+       "      <td>74.578550</td>\n",
+       "      <td>38.382575</td>\n",
+       "      <td>3.228924</td>\n",
+       "      <td>1.445033e+10</td>\n",
+       "      <td>848.527857</td>\n",
+       "      <td>5.732151e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-10-17</th>\n",
+       "      <td>28613.2400</td>\n",
+       "      <td>28094.140</td>\n",
+       "      <td>28518.3700</td>\n",
+       "      <td>9167.75</td>\n",
+       "      <td>2.599449e+08</td>\n",
+       "      <td>28504.0700</td>\n",
+       "      <td>5.553388e+11</td>\n",
+       "      <td>0.049341</td>\n",
+       "      <td>-0.000501</td>\n",
        "      <td>0</td>\n",
+       "      <td>27202.316440</td>\n",
+       "      <td>27378.804442</td>\n",
+       "      <td>176.488003</td>\n",
+       "      <td>61.568243</td>\n",
+       "      <td>0.465969</td>\n",
+       "      <td>1.471028e+10</td>\n",
+       "      <td>892.198571</td>\n",
+       "      <td>6.103068e+13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3822 rows × 6 columns</p>\n",
+       "<p>4673 rows × 18 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   price    market_cap  progression daily  \\\n",
-       "2013-04-29    141.960000  1.575032e+09           0.049224   \n",
-       "2013-04-30    135.300000  1.501657e+09          -0.046915   \n",
-       "2013-05-01    117.000000  1.298952e+09          -0.135255   \n",
-       "2013-05-02    103.430000  1.148668e+09          -0.115983   \n",
-       "2013-05-03     91.010000  1.011066e+09          -0.120081   \n",
-       "...                  ...           ...                ...   \n",
-       "2023-10-12  26842.190439  5.236564e+11          -0.020081   \n",
-       "2023-10-13  26729.137206  5.216077e+11          -0.004212   \n",
-       "2023-10-14  26841.136221  5.236556e+11           0.004190   \n",
-       "2023-10-15  26863.183569  5.239792e+11           0.000821   \n",
-       "2023-10-16  27150.297001  5.296435e+11           0.010688   \n",
+       "                  high        low        open  volumefrom      volumeto  \\\n",
+       "2011-01-01      0.3000      0.292      0.3000     2821.24  8.419500e+02   \n",
+       "2011-01-02      0.3000      0.289      0.3000     5352.11  1.584660e+03   \n",
+       "2011-01-03      0.3000      0.290      0.3000     1425.19  4.208500e+02   \n",
+       "2011-01-04      0.2999      0.289      0.2950     1879.00  5.483300e+02   \n",
+       "2011-01-05      0.2990      0.290      0.2989      357.16  1.061900e+02   \n",
+       "...                ...        ...         ...         ...           ...   \n",
+       "2023-10-13  27110.9100  26674.970  26756.2300    18507.04  4.967794e+08   \n",
+       "2023-10-14  26982.7800  26810.020  26862.9000     5865.21  1.576854e+08   \n",
+       "2023-10-15  27297.2600  26813.060  26854.5200    10978.68  2.971100e+08   \n",
+       "2023-10-16  30009.1500  27131.480  27177.4100    66720.48  1.884463e+09   \n",
+       "2023-10-17  28613.2400  28094.140  28518.3700     9167.75  2.599449e+08   \n",
        "\n",
-       "            progression tomorrow      volumeto  target  \n",
-       "2013-04-29             -0.046915  9.983975e+06       0  \n",
-       "2013-04-30             -0.135255  9.119201e+06       0  \n",
-       "2013-05-01             -0.115983  2.178794e+07       0  \n",
-       "2013-05-02             -0.120081  2.493210e+07       0  \n",
-       "2013-05-03              0.222393  2.249626e+07       1  \n",
-       "...                          ...           ...     ...  \n",
-       "2023-10-12             -0.004212  4.385320e+08       0  \n",
-       "2023-10-13              0.004190  4.967794e+08       1  \n",
-       "2023-10-14              0.000821  1.576854e+08       1  \n",
-       "2023-10-15              0.010688  2.971100e+08       1  \n",
-       "2023-10-16              0.000000  4.770461e+08       0  \n",
+       "                 close    market_cap  progression daily  progression tomorrow  \\\n",
+       "2011-01-01      0.3000           NaN           0.000000              0.000000   \n",
+       "2011-01-02      0.3000           NaN           0.000000              0.000000   \n",
+       "2011-01-03      0.2950           NaN           0.000000             -0.016667   \n",
+       "2011-01-04      0.2989           NaN          -0.016667              0.013220   \n",
+       "2011-01-05      0.2990           NaN           0.013220              0.000335   \n",
+       "...                ...           ...                ...                   ...   \n",
+       "2023-10-13  26862.9000  5.216077e+11          -0.004279              0.003987   \n",
+       "2023-10-14  26854.5200  5.236556e+11           0.003987             -0.000312   \n",
+       "2023-10-15  27177.4100  5.239792e+11          -0.000312              0.012024   \n",
+       "2023-10-16  28518.3700  5.296435e+11           0.012024              0.049341   \n",
+       "2023-10-17  28504.0700  5.553388e+11           0.049341             -0.000501   \n",
        "\n",
-       "[3822 rows x 6 columns]"
+       "            target        ema_26        ema_12        macd        rsi  \\\n",
+       "2011-01-01       0      0.263021      0.274296    0.011275  75.041736   \n",
+       "2011-01-02       0      0.265761      0.278251    0.012490  74.831650   \n",
+       "2011-01-03       0      0.268297      0.281597    0.013300  75.402884   \n",
+       "2011-01-04       1      0.270275      0.283659    0.013384  64.583333   \n",
+       "2011-01-05       1      0.272395      0.286004    0.013608  90.397805   \n",
+       "...            ...           ...           ...         ...        ...   \n",
+       "2023-10-13       1  27129.215560  27294.402418  165.186858  46.835697   \n",
+       "2023-10-14       0  27109.488482  27228.017431  118.528949  49.455572   \n",
+       "2023-10-15       1  27090.601927  27170.556287   79.954360  48.700891   \n",
+       "2023-10-16       1  27097.032155  27171.610705   74.578550  38.382575   \n",
+       "2023-10-17       0  27202.316440  27378.804442  176.488003  61.568243   \n",
+       "\n",
+       "            relative_volume           obv         atr    difficulty  \n",
+       "2011-01-01         0.433468  5.708910e+03    0.018136           NaN  \n",
+       "2011-01-02         0.784203  4.124250e+03    0.018214           NaN  \n",
+       "2011-01-03         0.227126  3.703400e+03    0.016429           NaN  \n",
+       "2011-01-04         0.317246  3.155070e+03    0.015286           NaN  \n",
+       "2011-01-05         0.063656  3.261260e+03    0.014000           NaN  \n",
+       "...                     ...           ...         ...           ...  \n",
+       "2023-10-13         0.904417  1.270529e+10  785.304286  5.732151e+13  \n",
+       "2023-10-14         0.288510  1.286298e+10  786.607857  5.732151e+13  \n",
+       "2023-10-15         0.555745  1.256587e+10  738.972857  5.732151e+13  \n",
+       "2023-10-16         3.228924  1.445033e+10  848.527857  5.732151e+13  \n",
+       "2023-10-17         0.465969  1.471028e+10  892.198571  6.103068e+13  \n",
+       "\n",
+       "[4673 rows x 18 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
