Nouvelle metric adaptée, à terminer

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -470,6 +470,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
    "outputs": [],
@@ -682,9 +696,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 167,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log Loss: 0.6904\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import log_loss\n",
     "\n",
@@ -724,12 +746,385 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log Loss: 0.6904\n"
+     ]
+    }
+   ],
    "source": [
     "train_model_proba(data, logistic_regression, features, target, window_size)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def earn_metric(predicted_probs, n_days, c):\n",
+    "      base = c\n",
+    "      progressions = []\n",
+    "      for i in range(n_days+1):\n",
+    "            progressions.append(data.iloc[window_size+i]['progression tomorrow']+1)\n",
+    "\n",
+    "            c *= predicted_probs[i] * progressions[i] + (1 - predicted_probs[i])\n",
+    "\n",
+    "      return c / base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import log_loss\n",
+    "\n",
+    "def train_model_proba_metric(data, model, features, target, window_size):\n",
+    "      \n",
+    "    # Initialiser les listes pour stocker les probabilités prédites et les vraies valeurs\n",
+    "    predicted_probs = []\n",
+    "    actuals = []\n",
+    "    earnings = []\n",
+    "\n",
+    "    # Boucle à travers les données de la taille de la fenêtre jusqu'à la fin des données\n",
+    "    for i in range(window_size, len(data) - 1):\n",
+    "        # Diviser les données en ensembles d'entraînement et de test\n",
+    "        X_train = features.iloc[i-window_size:i, :]\n",
+    "        y_train = target.iloc[i-window_size:i]\n",
+    "        X_test = features.iloc[i:i+1, :]\n",
+    "        y_test = target.iloc[i]\n",
+    "\n",
+    "        # Normaliser les données\n",
+    "        scaler = StandardScaler()\n",
+    "        X_train = scaler.fit_transform(X_train)\n",
+    "        X_test = scaler.transform(X_test)\n",
+    "        \n",
+    "        # Entraîner un modèle\n",
+    "        model.fit(X_train, y_train)\n",
+    "        \n",
+    "        # Obtenir les probabilités prédites pour la classe positive (par exemple, 1)\n",
+    "        prediction_prob = model.predict_proba(X_test)[:, 1]\n",
+    "        \n",
+    "        # Stocker les probabilités prédites et les vraies valeurs\n",
+    "        predicted_probs.extend(prediction_prob)\n",
+    "        actuals.append(y_test)\n",
+    "\n",
+    "    # Calculer la Log Loss\n",
+    "    loss = log_loss(actuals, predicted_probs)\n",
+    "    print(f'Log Loss: {loss:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "132.33886546544136\n",
+      "150.91903719912486\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = LogisticRegression()\n",
+    "# Initialiser les listes pour stocker les probabilités prédites et les vraies valeurs\n",
+    "predicted_probs = []\n",
+    "actuals = []\n",
+    "progressions = []\n",
+    "\n",
+    "c = 100\n",
+    "base = 100\n",
+    "\n",
+    "for i in range(31):\n",
+    "      # Diviser les données en ensembles d'entraînement et de test\n",
+    "      X_train = features.iloc[i:window_size+i, :]\n",
+    "      y_train = target.iloc[i:window_size+i]\n",
+    "      X_test = features.iloc[window_size+i : window_size+i+1, :]\n",
+    "      y_test = target.iloc[window_size+i]\n",
+    "\n",
+    "      # Normaliser les données\n",
+    "      scaler = StandardScaler()\n",
+    "      X_train_scaled = scaler.fit_transform(X_train)\n",
+    "      X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "      # Entraîner un modèle\n",
+    "      model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "      # Obtenir les probabilités prédites pour la classe positive (par exemple, 1)\n",
+    "      prediction_prob = model.predict_proba(X_test_scaled)[:, 1]\n",
+    "\n",
+    "      # Stocker les probabilités prédites et les vraies valeurs\n",
+    "      predicted_probs.extend(prediction_prob)\n",
+    "      actuals.append(y_test)\n",
+    "      progressions.append(data.iloc[window_size+i]['progression tomorrow']+1)\n",
+    "\n",
+    "      c *= predicted_probs[i] * progressions[i] + (1 - predicted_probs[i])\n",
+    "      base *= progressions[i]\n",
+    "\n",
+    "print(c)\n",
+    "print(base)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.013347921225383,\n",
+       " 1.0256963938674153,\n",
+       " 1.0096842105263157,\n",
+       " 0.9862385321100919,\n",
+       " 0.988724453840733,\n",
+       " 0.8766928011404134,\n",
+       " 1.064959349593496,\n",
+       " 1.044507214291167,\n",
+       " 0.9991229352433855,\n",
+       " 1.0080468178493052,\n",
+       " 0.9854862119013063,\n",
+       " 1.005081001472754,\n",
+       " 1.0220528976481793,\n",
+       " 1.0065232974910394,\n",
+       " 0.9977921800441564,\n",
+       " 1.0199143468950749,\n",
+       " 1.032472531317797,\n",
+       " 1.0260286043516573,\n",
+       " 1.0443945299597013,\n",
+       " 0.9666645581630717,\n",
+       " 1.0312131919905771,\n",
+       " 1.0678342534424774,\n",
+       " 1.0883646303779415,\n",
+       " 1.016107016107016,\n",
+       " 1.0358946802794198,\n",
+       " 1.0529619255109453,\n",
+       " 1.1230602492733632,\n",
+       " 0.9079264815545905,\n",
+       " 0.956034399458885,\n",
+       " 0.9529007479280373,\n",
+       " 1.0973165040305473]"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "progressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.60040721080683,\n",
+       " 0.479947056414951,\n",
+       " 0.548275436829798,\n",
+       " 0.4563232295849949,\n",
+       " 0.4422230635316302,\n",
+       " 0.4140664330528999,\n",
+       " 0.4361871849836109,\n",
+       " 0.43460689675727876,\n",
+       " 0.3887822819149118,\n",
+       " 0.37363990309366896,\n",
+       " 0.387200441772941,\n",
+       " 0.4055367094480023,\n",
+       " 0.4258094386710644,\n",
+       " 0.39559626208842863,\n",
+       " 0.37528370294677327,\n",
+       " 0.3506205662074579,\n",
+       " 0.2927787947594506,\n",
+       " 0.3714842412223311,\n",
+       " 0.4105885437975299,\n",
+       " 0.5173820022615735,\n",
+       " 0.6836440433816976,\n",
+       " 0.704059632038982,\n",
+       " 0.7912445607844866,\n",
+       " 0.6580611503646457,\n",
+       " 0.6503088615065241,\n",
+       " 0.6730367978693366,\n",
+       " 0.7328463246790808,\n",
+       " 0.591138581770577,\n",
+       " 0.5713847961102692,\n",
+       " 0.5889210519426863,\n",
+       " 0.5655505962196752]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicted_probs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c=100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c *= (progressions[0]*predicted_probs[0] + 1 - predicted_probs[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.80141881530018"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.012332908597145"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c *= (progressions[1]*predicted_probs[1] + 1 - predicted_probs[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.064959349593496"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "progressions[6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c *= predicted_probs[5] * progressions[5] + (1 - predicted_probs[5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94.89426279984663"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
