tests xgb avec features market_cap et diffitulty et premiers essais de neural network (MLP)

--- a/tests_neural_network.ipynb
+++ b/tests_neural_network.ipynb
@@ -193,7 +193,15 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Earn Metric: 0.9799\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Définir la métrique personnalisée\n",
     "\n",
