Test LSTM et NAS avec autokeras

--- a/tests_neural_network.ipynb
+++ b/tests_neural_network.ipynb
@@ -361,9 +361,17 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Earn Metric: 1.0055\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
+    "\"\"\"import numpy as np\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -426,7 +434,9 @@
     "        metric_value = earn_metric(predicted_probs, progressions, n_days)\n",
     "        metrics.append(metric_value)\n",
     "\n",
-    "print(f\"Average Earn Metric: {np.mean(metrics):.4f}\")"
+    "print(f\"Average Earn Metric: {np.mean(metrics):.4f}\")\"\"\"\n",
+    "\n",
+    "#2h15 pour un average metric à 1.0055..."
    ]
   },
   {
